@@ -5,8 +5,7 @@ import com.uca.parcialfinalncapas.repository.UserRepository;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
-
-import java.util.Collections;
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -19,23 +18,13 @@ public class CustomUserDetailsService implements UserDetailsService {
 
     @Override
     public UserDetails loadUserByUsername(String correo) throws UsernameNotFoundException {
-        User user = userRepo.findByCorreo(correo)
-                .orElseThrow(() -> new UsernameNotFoundException("No existe usuario con correo: " + correo));
+        User u = userRepo.findByCorreo(correo)
+                .orElseThrow(() -> new UsernameNotFoundException("Usuario no encontrado: " + correo));
 
-        // Construimos el UserDetails con builder para mayor claridad
-        return org.springframework.security.core.userdetails.User
-                .withUsername(user.getCorreo())
-                .password(user.getPassword())
-                .authorities(
-                        Collections.singletonList(
-                                new SimpleGrantedAuthority("ROLE_" + user.getNombreRol())
-                        )
-                )
-                // marcamos explícitamente que la cuenta está activa y no bloqueada/expirada
-                .accountExpired(false)
-                .accountLocked(false)
-                .credentialsExpired(false)
-                .disabled(false)
-                .build();
+        return new org.springframework.security.core.userdetails.User(
+                u.getCorreo(),
+                u.getPassword(),
+                List.of(new SimpleGrantedAuthority("ROLE_" + u.getNombreRol()))
+        );
     }
 }
